--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
